# keypress

./: .pre-commit.config.yaml  CONTRIBUTING.md  LICENSE  README.md  Sample.py  pyproject.toml
keypress/: __init__.py  key.py
tests/: test_keypress.py
